<resources>

    <string name="app_name">MatCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="title_activity_main">MatCalc</string>
    <string name="matrix_hint_A"><b>Matrix A</b> \nfor example: \n1,2,3 \n4,5,6 \n7,8,0</string>
    <string name="matrix_hint_B"><b>Matrix B</b> \nfor example: \n0.5 \n2 \n8</string>
    <string name="title_activity_about">MatCalc: About</string>
    <string name="title_activity_help">MatCalc: Help</string>
    <string name="title_about"><b>About MatCalc</b></string>
    <string name="title_help"><b>Explinations for matrix operations</b></string>
    <string name="content_about">MatCalc is a free and open source matrix calculator. It uses the lightweight but powerful JAMA matrix package, which is available in the public-domain. If you wish to contribute to the project, please visit the following link.</string>
    <string name="content_help">This is the help page</string>
    <string name="instructions">Use comma for new element, enter for new row.</string>
    <string name="not_square">Matrix must be square.</string>
    
    <string name="add">A+B</string>
    <string name="subtract">A-B</string>
    <string name="multiply">AB</string>
    <string name="solve">AX=B</string>
    <string name="det">|A|</string>
    <string name="inv">A<sup><small>-1</small></sup></string>
    <string name="trans">A<sup><small>T</small></sup></string>
    <string name="pow2">A<sup><small>2</small></sup></string>
    <string name="pow3">A<sup><small>3</small></sup></string>
    <string name="norm1">||A||<sub><small>1</small></sub></string>
    <string name="norm2">||A||<sub><small>2</small></sub></string>
    <string name="normInf">||A||<sub><small>&#8734;</small></sub></string>
    <string name="rank">RK(A)</string>
    <string name="trace">TR(A)</string>
    <string name="lul">LU-L</string>
    <string name="luu">LU-U</string>
    <string name="eigValue">D(A)</string>
    <string name="eigVector">V(A)</string>
    <string name="swap">swap</string>
    <string name="clear">clear</string>
    <string name="dummy"></string>
    
    <string name="row1"><b>Row one:</b> \nA+B: matrix addition \nA-B: matrix subtraction \nAB: matrix multiplication \nAX=B: solve for X</string>
    <string name="row2"><b>Row two:</b> \n|A|: determinant of A \nA<sup><small>-1</small></sup>: inverse of A \nA<sup><small>T</small></sup>: transpose of A \nA<sup><small>2</small></sup>: A squared</string>
    <string name="row3"><b>Row three:</b> \n||A||<sub><small>1</small></sub>: first norm \n||A||<sub><small>2</small></sub>: second norm \n||A||<sub><small>&#8734;</small></sub>: infinity norm \nA<sup><small>3</small></sup>: A cubed</string>
    <string name="row4"><b>Row four:</b> \nRK(A): rank of A \nTR(A): trace of A \nD(A): eigenvalues of A \nV(A): eigenvector of A</string>
    <string name="row5"><b>Row five:</b> \nLU-L: L of LU decomposition of A \nLU-U: U of LU decomposition of A \nswap: swap A for B \nclear: clear A</string>
    
    <string name="btn_wiki">Wiki</string>
    <string name="btn_ok">OK</string>
    <string name="btn_copy">Copy</string>
    
    <string name="add_sub_url">http://en.wikipedia.org/wiki/Matrix_addition</string>
    <string name="multiply_url">http://en.wikipedia.org/wiki/Matrix_multiplication</string>
    <string name="solve_url">http://en.wikipedia.org/wiki/System_of_linear_equations</string>
    <string name="det_url">http://en.wikipedia.org/wiki/Matrix_determinant</string>
    <string name="inv_url">http://en.wikipedia.org/wiki/Matrix_inverse</string>
    <string name="transpose_url">http://en.wikipedia.org/wiki/Matrix_transpose</string>
    <string name="rank_url">http://en.wikipedia.org/wiki/Rank_matrix</string>
    <string name="trace_url">http://en.wikipedia.org/wiki/Matrix_trace</string>
    <string name="norm_url">http://en.wikipedia.org/wiki/Matrix_norm</string>
    <string name="lu_url">http://en.wikipedia.org/wiki/LU_decomposition</string>
    <string name="eigen_url">http://en.wikipedia.org/wiki/Eigenvalues_and_eigenvectors</string>
    <string name="google_url">http://www.google.com</string>
    <string name="home_page">https://github.com/cong89/matcalc</string>

</resources>