<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view13"
        android:layout_centerVertical="true"
        android:text="@string/title_about"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
        <View
            android:id="@+id/view13"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/textView12"
            android:background="@android:color/black" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/content_about" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView12"
        android:layout_centerVertical="true"
        android:text="@string/home_page" 
        android:autoLink="web"/>

</RelativeLayout>