<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/instructions" 
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/matrixA"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:hint="@string/matrix_hint_A"
            android:inputType="textMultiLine" 
            android:gravity="top"/>

        <EditText
            android:id="@+id/matrixB"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:hint="@string/matrix_hint_B"
            android:inputType="textMultiLine" 
            android:gravity="top"/>
    </LinearLayout>

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="3dp"
        android:numColumns="4"
        android:verticalSpacing="3dp" >
    </GridView>

</LinearLayout>